# pods-ai

./: .gitignore  CONTRIBUTING.md  MCP_USAGE.md  README.md  pods-ai.pyproj  pods-ai.sln  requirements-mcp.txt  requirements.txt
.github/: copilot-instructions.md  renovate.json
LiveInferenceSystem/: .dockerignore  Dockerfile  pyproject.toml
LiveInferenceSystem/deploy/: andrews-bay-configmap.yaml  andrews-bay.yaml  bush-point-configmap.yaml  bush-point.yaml  mast-center-configmap.yaml  mast-center.yaml  north-sjc-configmap.yaml  north-sjc.yaml  orcasound-lab-configmap.yaml  orcasound-lab.yaml  point-robinson-configmap.yaml  point-robinson.yaml  port-townsend-configmap.yaml  port-townsend.yaml  sunset-bay-configmap.yaml  sunset-bay.yaml
LiveInferenceSystem/tests/orch_configs/LiveHLS/: LiveHLS_AndrewsBay.yml  LiveHLS_OrcasoundLab.yml
ModelTraining/: ModelTraining.pyproj  README.md
bootstrap/: README.md
src/: LiveInferenceOrchestrator.py  add_samples.py  audio_utils.py  compare_models.py  compare_models_w_embeddings.py  compare_new_models.py  concatenate_wavs.py  detailed_metrics.py  download_wavs.py  extract_training_samples.py  fine_tune_podsai_model.py  generate_embeddings.py  generate_embeddings_from_manifest.py  generate_multispecies_embeddings_from_manifest.py  make_csv.py  manual_samples_utils.py  mcp_server.py  merge_training_samples.py  model_inference.py  multispecies_train_model.py  multispecies_validation_confusion_matrix.py  orcahello_inference.py  orcasite_feeds.py  podsai_inference.py  process_false_negatives.py  process_false_positives.py  (+5 more)
(+49 files in other folders)
