[project]
name = "pods-ai-live-inference"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # PyTorch stack — CPU-only build is sufficient for AKS inference nodes;
    # GPU is not required and would increase image size significantly.
    "torch>=2.12.1",
    "torchaudio>=2.1.0",
    # HuggingFace
    "transformers>=5.0.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.24.0",
    "scipy>=1.10.0",
    # Data
    "numpy>=2.4.6,<2.5",
    "pandas>=1.1.0",
    "pyyaml>=6.0.0",
    # Azure
    "azure-cosmos>=4.5.0",
    "azure-storage-blob>=12.19.0",
    "opencensus-ext-azure>=1.1.9",
    # HLS / S3
    "m3u8>=4.0.0",
    "boto3>=1.28.0",
    "ffmpeg-python>=0.2.0",
    # Visualization
    "matplotlib>=3.7.0",
    "opencv-python>=4.8.0",
    # Utilities
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
